@@ -33,6 +33,10 @@ function Invoke-AppCmd
         $AppCmdArgs
     )
     
+    Set-StrictMode -Version 'Latest'
+
+    Write-Warning ('Invoke-AppCmd is obsolete and will be removed from a future version of Carbon. Use Carbon''s IIS functions, or `Get-IisConfigurationSection` to get `ConfigurationElement` objects to manipulate using the `Microsoft.Web.Administration` API.')
+
     Write-Verbose ($AppCmdArgs -join " ")
     & (Join-Path $env:SystemRoot 'System32\inetsrv\appcmd.exe') $AppCmdArgs
     if( $LastExitCode -ne 0 )
